# cservice

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
app/: config.py  db.py  main.py  routes_cservice.py  routes_internal.py  routes_kf_webhook.py
data/: cservice_seed.yaml
scripts/: backfill_customer_display_names.py  dev-cservice.sh  load_cservice_demo_ui.py  load_cservice_seed.py  purge_cservice_sessions.py  verify_cservice_m1.sh  verify_cservice_m2.sh  verify_cservice_m3.sh  verify_cservice_m4.sh  verify_cservice_m6.sh  verify_cservice_m7.sh  verify_cservice_p4_m1.sh  verify_cservice_p4_m2.sh
tests/: conftest.py  cservice_send_helpers.py  test_auth_deps.py  test_cservice_agent_thread.py  test_cservice_assign_retry.py  test_cservice_assign_round_robin.py  test_cservice_assign_scene.py  test_cservice_assign_trans.py  test_cservice_badge.py  test_cservice_customer_display.py  test_cservice_customers_list.py  test_cservice_demo_outbound.py  test_cservice_draft_cas.py  test_cservice_draft_downlink.py  test_cservice_draft_downlink_failed.py  test_cservice_draft_race.py  test_cservice_draft_service.py  test_cservice_hermes_schemas.py  test_cservice_hermes_ws_register.py  test_cservice_ingress_filter.py  test_cservice_isolation_m3.py  test_cservice_kf_webhook_crypto.py  test_cservice_kf_webhook_route.py  test_cservice_msg_send_fail.py  test_cservice_no_send_msg_m2.py  test_cservice_no_send_msg_m3.py  test_cservice_no_uplink_non_text.py  test_cservice_origin5.py  test_cservice_seed.py  test_cservice_send_edited.py  test_cservice_send_forbidden.py  (+36 more)
(+78 files in other folders)
