[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cservice"
version = "0.1.0.dev0"
description = "WeCom customer service (kf) API for skstudio — independent repo/process"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.109",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.0",
  "sqlalchemy>=2.0",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "httpx>=0.26",
  "pyyaml>=6.0",
  "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
